--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,14 @@ CMakeFiles
 CMakeCache.txt
 cmake_install.cmake
 
+bin/
+
+upcxx/
+
 googletest-build/
 googletest-download/
 googletest-src/
 
-#googletest-master/
-#googletest/gtest-all.o
-#libgtest.a
 output.txt
 
 deque
