--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 project(gtfxx LANGUAGES CXX)
-add_executable(gtfxx src/main.cpp)
+add_executable(gtfxx src/main.cpp src/gtfxx.cpp src/util.cpp)
 target_compile_features(gtfxx PUBLIC cxx_std_11)
 
 # -------------------------
@@ -76,7 +76,7 @@ target_compile_options(gtfxx PRIVATE ${PPFLAGS}) # UPCXX pre-processing flags
 
 # Include directories for compilation
 target_include_directories(gtfxx PRIVATE /usr/local/Cellar/eigen/3.3.4/include/eigen3)
-target_include_directories(gtfxx PRIVATE "src") # src contains header files as well
+target_include_directories(gtfxx PRIVATE include)
 
 # Options for linking
 target_link_libraries(gtfxx ${LDFLAGS}) # UPCXX linker flags
